--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build:live",
     "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "postinstall": "typings install --save"
   },
   "author": "Fritz Jay",
@@ -21,12 +21,26 @@
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.1.3",
     "@types/jsonwebtoken": "^7.2.7",
     "@types/mongodb": "^3.0.21",
     "@types/mongoose": "^5.0.18",
+    "jest": "^23.2.0",
     "nodemon": "^1.17.5",
+    "ts-jest": "^22.4.6",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2",
     "typings": "latest"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": ".*spec.*.(ts|tsx|js)$$"
   }
 }
