--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "npm run build:live",
     "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server.ts",
-    "test": "jest",
-    "postinstall": "typings install --save"
+    "test": "jest"
   },
   "author": "Fritz Jay",
   "license": "ISC",
@@ -16,6 +15,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
+    "mathjs": "^5.0.1",
     "mongoose": "^5.1.6"
   },
   "devDependencies": {
@@ -23,14 +23,15 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.1.3",
     "@types/jsonwebtoken": "^7.2.7",
+    "@types/mathjs": "^4.4.0",
     "@types/mongodb": "^3.0.21",
     "@types/mongoose": "^5.0.18",
+    "@types/node": "^10.5.1",
     "jest": "^23.2.0",
     "nodemon": "^1.17.5",
     "ts-jest": "^22.4.6",
     "ts-node": "^7.0.0",
-    "typescript": "^2.9.2",
-    "typings": "latest"
+    "typescript": "^2.9.2"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -41,6 +42,6 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": ".*spec.*.(ts|tsx|js)$$"
+    "testRegex": ".*spec.*.(ts|tsx)$$"
   }
 }
