Changed library to return promises.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": ".*spec.*.(ts|tsx)$$"
+    "testPathIgnorePatterns": [
+      "/node modules/",
+      "dist"
+    ],
+    "testRegex": ".*spec.*.(js|ts|tsx)$$"
   }
 }
