--- a/package.json
+++ b/package.json
@@ -10,13 +10,27 @@
   },
   "author": "Fritz Jay",
   "license": "ISC",
+  "engines": {
+    "node": "8.11.3",
+    "npm": "6.2.0"
+  },
   "dependencies": {
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mathjs": "^5.0.1",
-    "mongoose": "^5.1.6"
+    "mongoose": "^5.1.6",
+    "@types/bcrypt": "^2.0.0",
+    "@types/express": "^4.16.0",
+    "@types/jest": "^23.1.3",
+    "@types/jsonwebtoken": "^7.2.7",
+    "@types/mathjs": "^4.4.0",
+    "@types/mongodb": "^3.0.21",
+    "@types/mongoose": "^5.0.18",
+    "@types/node": "^10.5.1",
+    "ts-node": "^7.0.0",
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
