--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Teacher Hub API",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build:live",
-    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server.ts",
-    "test": "jest"
+    "start": "node dist/server.js",
+    "postinstall": "tsc"
   },
   "author": "Fritz Jay",
   "license": "ISC",
@@ -31,36 +30,5 @@
     "@types/node": "^10.5.1",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^2.0.0",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.1.3",
-    "@types/jsonwebtoken": "^7.2.7",
-    "@types/mathjs": "^4.4.0",
-    "@types/mongodb": "^3.0.21",
-    "@types/mongoose": "^5.0.18",
-    "@types/node": "^10.5.1",
-    "jest": "^23.2.0",
-    "nodemon": "^1.17.5",
-    "ts-jest": "^22.4.6",
-    "ts-node": "^7.0.0",
-    "typescript": "^2.9.2"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
-    },
-    "testPathIgnorePatterns": [
-      "/node modules/",
-      "dist"
-    ],
-    "testRegex": ".*spec.*.(js|ts|tsx)$$",
-    "testURL": "https://localhost/"
   }
 }
