--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "lib": [
-      "es2018"
+      "es2018",
+      "dom"
     ]
   },
   "exclude": [
