--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Teacher Hub API",
   "main": "index.js",
   "scripts": {
+    "start-dev": "nodemon --exec ./node_modules/.bin/ts-node -- ./server.ts",
     "start": "node dist/server.js",
     "postinstall": "tsc"
   },
@@ -14,12 +15,6 @@
     "npm": "6.2.0"
   },
   "dependencies": {
-    "bcrypt": "^2.0.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0",
-    "mathjs": "^5.0.1",
-    "mongoose": "^5.1.6",
     "@types/bcrypt": "^2.0.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.1.3",
@@ -28,7 +23,35 @@
     "@types/mongodb": "^3.0.21",
     "@types/mongoose": "^5.0.18",
     "@types/node": "^10.5.1",
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "mathjs": "^5.0.1",
+    "mongoose": "^5.1.6",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
+  },
+  "devDependencies": {
+    "jest": "^23.2.0",
+    "nodemon": "^1.17.5",
+    "ts-jest": "^22.4.6"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
+    },
+    "testPathIgnorePatterns": [
+      "/node modules/",
+      "dist"
+    ],
+    "testRegex": ".*spec.*.(js|ts|tsx)$$",
+    "testURL": "https://localhost/"
   }
 }
