--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.3.0",
     "mathjs": "^5.2.3",
     "mongoose": "^5.3.8",
+    "shortid": "^2.2.13",
     "ts-node": "^7.0.1",
     "typescript": "^2.9.2"
   },
