--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.0.2",
     "jsonwebtoken": "^8.3.0",
     "mathjs": "^5.2.3",
     "mongoose": "^5.3.8",
