--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^10.12.2",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
