--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@types/bcrypt": "^2.0.0",
     "@types/express": "^4.16.0",
+    "@types/graphql": "^14.0.3",
+    "@types/graphql-iso-date": "^3.3.1",
     "@types/jest": "^23.3.9",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/mathjs": "^4.4.2",
@@ -31,6 +33,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
+    "graphql-iso-date": "^3.6.1",
     "jsonwebtoken": "^8.3.0",
     "mathjs": "^5.2.3",
     "mongoose": "^5.3.8",
