--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "~name~ GraphQL Server",
   "scripts": {
-    "start": "SET MONGO_URL=mongodb://localhost:27017 && babel-node index.js"
+    "start": "SET MONGO_URL=mongodb://localhost:27017 && babel-node index.js",
+    "start-prod": "babel-node index.js"
   },
   "private": true,
   "author": "",
