--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "shortid": "^2.2.14",
-    "subscriptions-transport-ws": "0.9.15"
+    "subscriptions-transport-ws": "0.9.15",
     "nodemon": "1.18.7"
   }
 }
