--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-NODE_ENV = development
-SECRET = '`secret`'
-MONGO_URL = 'localhost:27017'
-TTP_URL = 'http://localhost:3001'
+SECRET='`secret`'
+MONGO_URL='localhost:27017'
+DEV_DATABASE='database'
+STAGING_DATABASE='staging'
+PRODUCTION_DATABASE='production'
+TTP_URL ='http://localhost:3001'
