Fixed database uri

--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 SECRET='`secret`'
 MONGO_URL='localhost:27017'
-DEV_DATABASE='database'
-STAGING_DATABASE='staging'
-PRODUCTION_DATABASE='production'
+DATABASE='database'
 TTP_URL ='http://localhost:3001'
